...
    <string name="inventory_param_resistance">Resistance</string>
    <string name="inventory_param_capacitance">Capacitance</string>
    <string name="inventory_param_inductance">Inductance</string>
    <string name="inventory_param_voltage">Rated voltage</string>
    <string name="inventory_param_tolerance">Tolerance</string>
    <string name="inventory_param_power">Power</string>
    <string name="movements_include_deleted_components">Include deleted components (%1$d)</string>
    <string name="movements_deleted_component">Deleted component</string>
    <string name="inventory_param_operating_temperature">Operating temperature</string>
    <string name="inventory_param_type">Type</string>
    <string name="inventory_param_temperature_coefficient">Temperature coefficient</string>
    <string name="quantity_step_decrease">Decrease quantity</string>
    <string name="quantity_step_increase">Increase quantity</string>
</resources>
...
